<resources>
    <string name="app_name">InfoAr</string>
    <string name="terminos_y_condiciones_titulo">Términos y Condiciones</string>
    <string name="terminos_y_condiciones">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\nSed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</string>
    <string name="ingresar_usuario">Ingresar usuario</string>
    <string name="ingresar_contrasenia">Ingresar contraseña</string>
    <string name="recordar_usuario">Recordar usuario</string>
    <string name="crear_usuario">Crear Usuario</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="bienvenido_usuario">Bienvenido %s</string>
    <string name="usuario_et_hint">Usuario</string>
    <string name="password_et_hint">Contraseña</string>
    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="close_drawer">Close Navigation Drawer</string>
    <string name="noticias_title_screen">Entérate de las noticias alrededor del mundo!</string>
    <string name="usuarios_title_screen">Conozca a nuestros usuarios</string>
    <string name="ver_mapa">Ver mapa  ></string>
    <string name="noticia_usuario_text">escrito por %1$s</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>