<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".fragments.LoginFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingresar_usuario" />

    <EditText
        android:id="@+id/etUsuario"
        android:minHeight="48dp"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content"
        android:hint="@string/usuario_et_hint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/ingresar_contrasenia" />

    <EditText
        android:id="@+id/etContraseña"
        android:minHeight="48dp"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_et_hint"/>

    <CheckBox
        android:id="@+id/checkBoxRecordar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recordar_usuario" />

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="4dp"
        android:text="@string/iniciar_sesion" />

    <TextView
        android:id="@+id/termsAndCondTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/material_dynamic_primary10"
        android:textStyle="bold"
        android:text="@string/terminos_y_condiciones_titulo"/>

</LinearLayout>